Replace unmaintained flask-restful with flask-restx
JIRA: RHELWF-8897

--- a/waiverdb/templates/new_waiver.html
+++ b/waiverdb/templates/new_waiver.html
@@ -11,7 +11,7 @@
     {% if new_waiver_url %}
     <div class="alert alert-success" role="alert"><a href="{{ new_waiver_url | safe }}">New waiver created.</a></div>
     {% endif %}
-    <form method="get" action="{{ url_for('api_v1.waiverscreateresource') }}">
+    <form method="get" action="{{ url_for('api_v1.waivers_create_resource') }}">
         <div class="mb-3">
             <label for="subject_type" class="form-label">Subject Type</label>
             <input type="text" class="form-control" name="subject_type"
