--- a/waiverdb/templates/new_waiver.html
+++ b/waiverdb/templates/new_waiver.html
@@ -6,17 +6,22 @@
 
 {% block body %}
     {% if warning %}
-    <div class="alert alert-danger" role="alert">{{ warning | safe }}</div>
+    <div class="alert alert-danger" role="alert" id="other-error">{{ warning | safe }}</div>
     {% endif %}
-    {% if new_waiver_url %}
-    <div class="alert alert-success" role="alert"><a href="{{ new_waiver_url | safe }}">New waiver created.</a></div>
-    {% endif %}
-    <form method="get" action="{{ url_for('api_v1.waivers_create_resource') }}">
+    <div class="alert alert-danger d-none" role="alert" id="waiver-result">
+        <div id="result-text-error" class="d-none">
+            Unable to create a waiver: <span id="error-desc"></span>
+        </div>
+        <div id="result-text-success" class="d-none">
+            <a id="result-link" href="#">New waiver created.</a>
+        </div>
+    </div>
+    <form>
         <div class="mb-3">
             <label for="subject_type" class="form-label">Subject Type</label>
-            <input type="text" class="form-control" name="subject_type"
+            <input type="text" class="form-control" name="subject_type" id="subject_type"
             value="{{ request_args.subject_type }}" autocomplete="on"
-            aria-describedby="subject_type_help" required>
+            aria-describedby="subject_type_help" required="required" />
             <div id="subject_type_help" class="form-text">
                 Examples: koji-build, container-image, redhat-container-image
             </div>
@@ -24,9 +29,9 @@
 
         <div class="mb-3">
             <label for="subject_identifier" class="form-label">Subject Identifier</label>
-            <input type="text" class="form-control" name="subject_identifier"
+            <input type="text" class="form-control" name="subject_identifier" id="subject_identifier"
             value="{{ request_args.subject_identifier }}" autocomplete="on"
-            aria-describedby="subject_identifier_help" required>
+            aria-describedby="subject_identifier_help" required="required" />
             <div id="subject_identifier_help" class="form-text">
                 Depending on the subject type, can contain a name-version-release, a
                 build ID or another identifier.
@@ -35,9 +40,9 @@
 
         <div class="mb-3">
             <label for="testcase" class="form-label">Test Case Name</label>
-            <input type="text" class="form-control" name="testcase"
+            <input type="text" class="form-control" name="testcase" id="testcase"
             value="{{ request_args.testcase }}" autocomplete="on"
-            aria-describedby="testcase_help" required>
+            aria-describedby="testcase_help" required="required" >
             <div id="testcase_help" class="form-text">
                 Examples: compose.install_default, update.desktop_browser, fedora-ci.koji-build.tier0.functional
             </div>
@@ -45,9 +50,9 @@
 
         <div class="mb-3">
             <label for="product_version" class="form-label">Product Version</label>
-            <input type="text" class="form-control" name="product_version"
+            <input type="text" class="form-control" name="product_version" id="product_version"
             value="{{ request_args.product_version }}" autocomplete="on"
-            aria-describedby="product_version_help" required>
+            aria-describedby="product_version_help" required="required" />
             <div id="product_version_help" class="form-text">
                 Examples: fedora-36, rhel-9
             </div>
@@ -55,9 +60,9 @@
 
         <div class="mb-3">
             <label for="comment" class="form-label">Comment</label>
-            <input type="text" class="form-control" name="comment"
+            <input type="text" class="form-control" name="comment" id="comment"
             value="{{ request_args.comment }}" autocomplete="on"
-            aria-describedby="comment_help" required>
+            aria-describedby="comment_help" required="required" />
             <div id="comment_help" class="form-text">
                 Explain why failed or missing test has to be waived.
                 <em>Tip:</em> Add an issue identifier.
@@ -66,9 +71,9 @@
 
         <div class="mb-3">
             <label for="scenario" class="form-label">Scenario (Optional)</label>
-            <input type="text" class="form-control" name="scenario"
+            <input type="text" class="form-control" name="scenario" id="scenario"
             value="{{ request_args.scenario }}" autocomplete="on"
-            aria-describedby="scenario_help">
+            aria-describedby="scenario_help" />
             <div id="scenario_help" class="form-text">
                 Optional scenario to distinguish test results with same test case name.
                 Example: fedora.Cloud_Base-qcow2-qcow2.x86_64.uefi
