--- a/waiverdb/templates/layout.html
+++ b/waiverdb/templates/layout.html
@@ -19,6 +19,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         {% block scripts %}
         {% endblock %}
+
+        <style>
+        tr ul { padding-left: 1rem; }
+        </style>
     </head>
 
     <body>
