Add functional tests and deploy keycloak with docker-compose

--- a/waiverdb/templates/new_waiver.html
+++ b/waiverdb/templates/new_waiver.html
@@ -21,7 +21,7 @@
             <a id="result-link" href="#">New waiver</a> created. ID: <span id="new-waiver-id"></span>
         </div>
     </div>
-    <form>
+    <form id="new-waiver-form">
         <div class="mb-3">
             <label for="subject_type" class="form-label">Subject Type</label>
             <input type="text" class="form-control" name="subject_type" id="subject_type"
