Use correct subject type example on the web form

--- a/waiverdb/templates/new_waiver.html
+++ b/waiverdb/templates/new_waiver.html
@@ -28,7 +28,7 @@
             value="{{ request_args.subject_type }}" autocomplete="on"
             aria-describedby="subject_type_help" required="required" />
             <div id="subject_type_help" class="form-text">
-                Examples: koji-build, container-image, redhat-container-image
+                Examples: koji_build, container-image, redhat-container-image
             </div>
         </div>
 
